# Gilligan

./: .gitignore  .rosinstall  README.md  bashrc
DLT/: DLT.cpp  DLT.h  DLTTest.cpp  Makefile
ImuTuner/: CMakeLists.txt  ImuTuner.files  manifest.xml
ImuTuner/src/: ImuTuner.cpp  ImuTuner.hpp  ImuTuner.ui  ImuTunerMain.cpp
SubConsole/: CMakeLists.txt  README  SubConsole  SubConsole.files  manifest.xml
SubConsole/msg/: Image.h  imuMsg.h  motorMsg.h  motorMsg.msg
SubConsole/src/: SubConsole.cpp  SubConsole.hpp  SubConsole.ui  main.cpp
USUbConsole/: CMakeLists.txt  README  USUbConsole.files  manifest.xml
USUbConsole/src/: SubConsole.cpp  SubConsole.hpp  SubConsole.ui  joystick.h  main.cpp
arduinoWorkspace/CurrentController/: CurrentController.ino
arduinoWorkspace/ImuSketch/: ImuSketch.ino  defs.h  i2c.h  types.h
arduinoWorkspace/RazorIMU/: RazorIMU.pde
arduinoWorkspace/Razor_AHRS_Imu/: Output.pde  Razor_AHRS_Imu.pde
arduinoWorkspace/RosMotorAndDepthDiamondback/: RosMotorAndDepthDiamondback.pde
arduinoWorkspace/RosSensorBoard/: RosSensorBoard.pde
arduinoWorkspace/SubSensorBoard/: SubSensorBoard.ino
arduinoWorkspace/SubWaterSensorController/: SubWaterSensorController.ino
arduinoWorkspace/ToggleController/: ToggleController.ino
arduinoWorkspace/WildThumperControllerRos/: WildThumperControllerRos.pde
arduinoWorkspace/WildThumperControllerSerial/: WildThumperControllerSerial.pde
rosWorkspace/Brain/: mainpage.dox  manifest.xml
rosWorkspace/BuoysTask/: BuoysTask.files  CMakeLists.txt  mainpage.dox  manifest.xml
rosWorkspace/GateTask/: CMakeLists.txt  mainpage.dox  manifest.xml
rosWorkspace/MipLibrary/: Makefile
rosWorkspace/NavigationControl/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
rosWorkspace/ObstacleCourseTask/: CMakeLists.txt  mainpage.dox  manifest.xml
rosWorkspace/PathTask/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
rosWorkspace/QualifyTask/: mainpage.dox  manifest.xml
rosWorkspace/Robosub/: mainpage.dox  manifest.xml
rosWorkspace/SubAttitudeResolver/: CMakeLists.txt  Makefile  SubAttitudeResolver.files  manifest.xml
rosWorkspace/SubCameraDriver/: mainpage.dox  manifest.xml
rosWorkspace/SubDepthController/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
rosWorkspace/SubDiveAlarm/: CMakeLists.txt  manifest.xml
rosWorkspace/SubFloodSensor/: CMakeLists.txt  manifest.xml
rosWorkspace/SubHeading/: CMakeLists.txt  manifest.xml
rosWorkspace/SubImagePrep/: mainpage.dox  manifest.xml
rosWorkspace/SubImageRecognition/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gate.tree  mainpage.dox  manifest.xml  parking.tree  path.tree  pizzabox.tree  redbuoy.tree  tree.tree
rosWorkspace/SubImuController/: .cproject  .project  CMakeLists.txt  manifest.xml
rosWorkspace/SubMotorController/: .project  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
rosWorkspace/SubSensorController/: CMakeLists.txt  Makefile  manifest.xml
rosWorkspace/SubStateMachine/: Makefile  mainpage.dox  manifest.xml
rosWorkspace/SubTranslators/: CMakeLists.txt  mainpage.dox  manifest.xml
rosWorkspace/TorpedoTask/: CMakeLists.txt  manifest.xml
rosWorkspace/USBLibrary/: CMakeLists.txt  mainpage.dox  manifest.xml
rosWorkspace/USUbConsole/: CMakeLists.txt  README  USUbConsole.files  USUbConsole.includes  manifest.xml
rosWorkspace/USUbConsole/catkin_generated/: generate_cached_setup.py  setup_cached.sh
rosWorkspace/USUbConsole/devel/: .catkin  .rosinstall  setup.sh
rosWorkspace/USUbConsole/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
rosWorkspace/USUbConsole/msg/: MotorMessage.msg
rosWorkspace/USUbConsole/src/: ClickableLabel.cpp  ClickableLabel.hpp  SubConsole.cpp  SubConsole.hpp  SubConsole.ui  attitude_indicator.cpp  attitude_indicator.h  filter.cpp  filter.hpp  main.cpp
rosWorkspace/USUbConsole/src/USUbConsole/msg/: _MotorMessage.py  __init__.py
rosWorkspace/mip_common/: .cproject  .project  CMakeLists.txt  mainpage.dox  manifest.xml
rosWorkspace/moboTemp/: CMakeLists.txt  mainpage.dox  manifest.xml
rosWorkspace/motorTester/: CMakeLists.txt  mainpage.dox  manifest.xml
rosWorkspace/pgr_camera_driver/: .gitignore  CMakeLists.txt  Makefile  USUb_README  left_intrinsics.ini  (+4 more)
rosWorkspace/subSim/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
rosWorkspace/subSim/include/: objLoader.h
rosWorkspace/subSim/msg_gen/cpp/include/subSim/: MotorMessage.h  mixer.h
rosWorkspace/subSim/msg_gen/lisp/: MotorMessage.lisp  _package.lisp  _package_MotorMessage.lisp  _package_mixer.lisp  mixer.lisp  subSim-msg.asd
rosWorkspace/subSim/src/: .repeater.cpp.swp  .simpleDepth.cpp.swp  .simulator.cpp.swp  broken.cpp  mixer.cpp  motor.cpp  motor.h  objLoader.cpp  repeater.cpp  simpleDepth.cpp  simpleHeading.cpp  simplePoint.cpp  simulator.cpp  sub.h  translatePoint.cpp  viz.cpp
rosWorkspace/subSim/src/subSim/msg/: _MotorMessage.py  __init__.py  _mixer.py
scripts/: .gitignore  cameraTest.sh  controllerProgrammer.sh  diveController.sh  driveController.sh  killRos.sh  networkWatchdog.sh  roslog.sh  startup.sh  startupAuto.sh  startupManual.sh  startupQualify.sh  stereoStartupTest.sh  turnController.sh  udevCreator.sh
web/: README  hardware.html  index.html  pictures.html  software.html  style.css  team.html  videos.html
(+296 files in other folders)
